# open-sonic-recreation

./: .gitignore  CMakeLists.txt
include/: AudioMappings.h  TitleScreen.h
src/: Game.cpp  Level.cpp
